added copy message

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 <body>
   <h1>Password Generator</h1>
   <form>
-    <input id='pass' type='text' name='Password'><br>
-    <input type='button' value='Generate' onClick='myFunction()'></br>
+    <input id='pass' type='text' name='Password'>
+    <input type='button' value='Generate' onClick='myFunction()'>
+    <p>Click to copy</p>
   </form>
   <script type="text/javascript">
 
